tests/paczka1/small_fuzzy/60669236.err
Error in line 1: SQrxN7Og3a S719 31,5
Error in line 8: SQrxN7Og3a S99 36,3
